--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Aayush Agarwal
 markdown: kramdown
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/midnight
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
