--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Aayush Agarwal
 markdown: kramdown
-remote_theme: pages-themes/midnight
+remote_theme: jekyll/minima
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
