--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ name: Aayush Agarwal
 markdown: kramdown
 remote_theme: jekyll/minima
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-theme
+minima:
+  skin: auto
