--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Aayush Agarwal
-markdown: kramdown
+# name: Aayush Agarwal
+# markdown: kramdown
 remote_theme: jekyll/minima
 plugins:
 - jekyll-remote-theme
